Try 3 to fix height problem on mobile browsers

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -2,7 +2,7 @@
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
-  height: 100vh;
+  height: var(--height);
   color: white;
 }
 
