--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -24,6 +24,9 @@
   --md: 768px;
   --lg: 1024px;
   --xl: 1200px;
+
+  /* Height */
+  --height: 0px;
 }
 
 *, *::before, *::after {
